force-app/main/default/objects/User_for_CCS_Category__c/User_for_CCS_Category__c.object-meta.xml
<CustomObject>
    <label>User for CCS Category</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>CCS Category for User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users for CCS Category</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>