force-app/main/default/objects/User_for_CCS_Category__c/fields/CCS_Category__c.field-meta.xml
<CustomField>
    <fullName>CCS_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCS Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Category__c.CategoryType__c</field>
            <operation>equals</operation>
            <value>CCS Category</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Category__c</referenceTo>
    <relationshipName>CCS_Category_for_User</relationshipName>
    <type>Lookup</type>
</CustomField>