force-app/main/default/objects/User_for_CCS_Category__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CCS_Category_for_User</relationshipName>
    <type>Lookup</type>
</CustomField>