force-app/main/default/objects/User_for_CCS_Category__c/fields/User_For_CCS_Cat_External_Id__c.field-meta.xml
<CustomField>
    <fullName>User_For_CCS_Cat_External_Id__c</fullName>
    <description>External Id (Not generated by Salesforce) - used as a reference point for loading data from external systems</description>
    <externalId>true</externalId>
    <label>User For CCS Cat External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>